--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   </head>
   <body>
     <div id="app"></div>
+    <p>w,a,s,d操作移动水果兄弟，每撑过64秒进入下一关，难度，角色，武器系统开发中...</p>
     <script type="module" src="/src/index.js"></script>
   </body>
 </html>
